--- a/streetart.html
+++ b/streetart.html
@@ -51,31 +51,40 @@ This factory building that used to be found in Long island city it's exterior an
              Photo by Bobby Zucco on Flickr
            </figcaption>
        </figure>
-
 <p>
 This Mural of Donald trump drawn as feces made by the artist Hanksy it was drawn on August 2015 when Trump was running for predencity. This mural shows that its anti trump and this mural went viral because it was still up in the elections season Hanksy drew this mural because he thought trump was a joke so he decided to draw this mural as joke wheich at the end of the day went viral. </p>
       </section>
 
       <section class="article-text">
-        <figcaption>
-          Photo by Piotr Jasinski on Flickr
-        </figcaption>
-<p><img src="Images/free-zohra.jpg" alt="mural of Zhora behind bars" style="width:300px;height:300px;margin-right:15px;">
+        <figure>
+          <img src="images/free-zohra.jpg" alt="mural of Zhora behind bars" style="width:300px;height:300px;margin-right:15px;">
+          <figcaption>
+            Photo by Piotr Jasinski on Flickr
+          </figcaption>
+        </figure>
+<p>
 This mural was drawn by the famous artist Banksy he drew this to pay tribute to jailed turkish artist Zehra Dogan he drew this to protest over the imprisonment of Zehra Dogan because she's a journalist and a artist and she was serving jail time for three years because one of her paintings she did. Zehra Dogan got arrested because she posted a watercolor showing the rubble of the Kurdish town on Nusaybin destroyed by the turkish army in 2015. The reason Banksy drew this mural was because he feel for Zehra because he feels like he has drawn worse stuff then what she did and it's not fair that she got arrested.</p>
       </section>
 
       <section class="article-text">
-        <figcaption>
-          Photo by Michael Centeno
-        </figcaption>
-<p><img src="Images/dumbo.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
+        <figure>
+          <img src="images/dumbo.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
+          <figcaption>
+            Photo by Michael Centeno
+          </figcaption>
+        </figure>
+<p>
 This drawing in dumbo with a superhero and a quote that says "The society that separates its scholars from its warriors will have its thinking done by cowards and its fighting by fools." has many different interpretations one of those interpretations is that if a man doesn't appreciate the importance of knowledge and strength, he is condemed to be a coward or a fool. Another interpretation is the standard of justice depends on the equality of power to compel it. A lot of art has different interpretations that people have and this is one of them. </p>
        </section>
 
       <section class="article-text">
-        <figcaption>
-          Photo by Jamison Lottering
-<p><img src="Images/fdny911.jpg" alt="firefighter over the US flag remembering 911" style="width:300px;height:300px;margin-right:15px;">
+        <figure>
+          <img src="images/fdny911.jpg" alt="firefighter over the US flag remembering 911" style="width:300px;height:300px;margin-right:15px;">
+          <figcaption>
+            Photo by Jamison Lottering
+          </figcaption>
+        </figure>
+<p>
 In this mural there's a background of the United states flag with a firefighter on his knee this mural represents of all the lives that were lost on nine eleven.</p>
       </section>
 
