--- a/streetart.html
+++ b/streetart.html
@@ -56,7 +56,7 @@ This Mural of Donald trump drawn as feces made by the artist Hanksy it was drawn
       </section>
 
       <section class="article-text">
-        <figure>
+        <figure class="inline-image">
           <img src="images/free-zohra.jpg" alt="mural of Zhora behind bars" style="width:300px;height:300px;margin-right:15px;">
           <figcaption>
             Photo by Piotr Jasinski on Flickr
@@ -67,7 +67,7 @@ This mural was drawn by the famous artist Banksy he drew this to pay tribute to 
       </section>
 
       <section class="article-text">
-        <figure>
+        <figure class="inline-image">
           <img src="images/dumbo1.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
           <figcaption>
             Photo by Michael Centeno
@@ -78,7 +78,7 @@ This drawing in dumbo with a superhero and a quote that says "The society that s
        </section>
 
       <section class="article-text">
-        <figure>
+        <figure class="inline-image">
           <img src="images/fdny911.jpg" alt="firefighter over the US flag remembering 911" style="width:300px;height:300px;margin-right:15px;">
           <figcaption>
             Photo by Jamison Lottering
