--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@ display: table;
 <div class="clearfix">
 <div class="img-container">
 <img src="images/free-zohra.jpg" alt="a mural of zhora drawn behind bars" style="width:100%">
+<figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
 </div>
 <div class="img-container">
 <img src="images/trump-dump.jpg" alt="a mural in soho of trump as a poop emoji" style="width:100%">
+<figcaption>Photo by Bobby Zucco on Flickr </figcaption>
 </div>
 </body>
 </html>
