--- a/streetart.html
+++ b/streetart.html
@@ -93,7 +93,7 @@ In this mural there's a background of the United states flag with a firefighter 
 </main>
 
 </footer>
-<footer>
+<footer class="page-footer">
   <p>&copy; Michael Centeno 2018 </p>
   <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
