--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
        </div>
        <h2 class="articletitle">Home</h2>
        </header>
-       <section class="article-text">
+       <section class="article-introduction">
        <h3
-       class="article-introduction">Introduction</h3>
+       class="">Introduction</h3>
        <p>In NYC, anywhere you go you see a lot of different street art. Many artists express themselves with the art that they do and there work always has meaning behind it. Many artists risk themselves for doing street art because in most places street art is not allowed that’s why most artist are remained anonymous. </p>
        </section>
       <section class="article-text">
@@ -98,7 +98,8 @@
 
 <footer>
 <p>&copy; Michael Centeno 2018 </p>
-<p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+<p>Contact information: <a href="Michael.centeno1996@gmail.com">
+  Michael.centeno1996@gmail.com</a></p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
