--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
   </div>
   <div class="img-container">
-    <img src="images/dumbo.jpg" alt="superhero" style="width:100%">
+    <img src="images/dumbo1.jpg" alt="superhero" style="width:100%">
   </div>
 </div>
 
