--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </p>
 </section>
 <section>
-
-<figure class="img-container">
+<div class="clearfix">
+<div class="img-container">
 <img src="images/fdny911.jpg" alt="firefighter on his knee over the US flag remembering 911" style="width:100%">
 <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
-</figure>
+</div>
 <div class="img-container">
 <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
 <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
