no mistakes found

--- a/images.html
+++ b/images.html
@@ -31,10 +31,12 @@
        <header class="article-header">
        <div class="featured-image">
        <h2 class="articletitle">Images</h2>
+     </div>
        </header>
        <section class="article-text">
        <h3
        class="article-introduction">NYC Street Art</h3>
+     </section>
   </article>
 
 
@@ -67,7 +69,7 @@
 
 <footer>
 <p>&copy; Michael Centeno 2018 </p>
-<p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+<p>Contact information: <a> href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
