--- a/images.html
+++ b/images.html
@@ -57,7 +57,7 @@
     <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
 </figure>
 <figure>
-    <img src="images/dumbo.jpg" alt="Drawing of super hero with a quote over his head"/>
+    <img src="images/dumbo1.jpg" alt="Drawing of super hero with a quote over his head"/>
     <figcaption>Photo by Michael Centeno </figcaption>
 </figure>
 <figure>
