--- a/images.html
+++ b/images.html
@@ -70,7 +70,7 @@
 
   <footer class="page-footer">
     <p>&copy; Michael Centeno 2018 </p>
-    <p>Contact information: <a> href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+    <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
