--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
 
 </main>
 
-<footer>
-<p>&copy; Michael Centeno 2018 </p>
-<p>Contact information: <a href="Michael.centeno1996@gmail.com">
-  Michael.centeno1996@gmail.com</a></p>
+<footer class="page-footer">
+  <p>&copy; Michael Centeno 2018 </p>
+  <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
