--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
        <header class="article-header">
        <div class="featured-image">
        <h2 class="articletitle">About</h2>
+     </div>
        </header>
        <section class="article-text">
        <h3
@@ -59,7 +60,6 @@
     display: table;
 }
 </style>
-</head>
 <body>
 
 
