credit to pictures

--- a/about.html
+++ b/about.html
@@ -67,24 +67,30 @@
 <div class="clearfix">
   <div class="img-container">
     <img src="images/building.jpg" alt="building" style="width:100%">
+    <figcaption>Photo by Pelle Sten on Flickr </figcaption>
   </div>
   <div class="img-container">
     <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
+    <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
   </div>
   <div class="img-container">
     <img src="images/dumbo1.jpg" alt="superhero" style="width:100%">
+    <figcaption>Photo by Michael Centeno </figcaption>
   </div>
 </div>
 
 <div class="clearfix">
   <div class="img-container">
     <img src="images/fdny911.jpg" alt="fireman with US flag" style="width:100%">
+      <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
   </div>
   <div class="img-container">
     <img src="images/trump-dump.jpg" alt="Trump as a poop emoji" style="width:100%">
+    <figcaption>Photo by Bobby Zucco on Flickr </figcaption>
   </div>
   <div class="img-container">
     <img src="images/jamison-lottering-unsplash.jpg" alt="mural of the twin towers with the US flag" style="width:100%">
+  <figcaption>Photo by Jamison Lottering on Unsplah</figcaption>
   </div>
 </div>
 
