--- a/map.html
+++ b/map.html
@@ -44,6 +44,9 @@
         <p></p>
       </section>
 
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c67b4ce7-0afa-44e8-9b33-14e40370acf2"></div>
+
       <style>
 * {
     box-sizing: border-box;
