--- a/map.html
+++ b/map.html
@@ -31,12 +31,12 @@
    <article class="article-full">
        <header class="article-header">
        <div class="featured-image">
-       <h2 class="articletitle">About</h2>
+       <h2 class="articletitle">Map</h2>
      </div>
        </header>
        <section class="article-text">
        <h3
-       class="article-introduction">About this site</h3>
+       class="article-introduction">Places To Find Street Art In NYC </h3>
        <p>New York City has a lot street around all five boroughs but many artists stay anonymous because they put their artwork where it’s not legal too. Many artists are popular and well known but people don’t even know how they look like because they like keeping themselves unknown and out of trouble for example a famous artist that is well known but no one has a clue how he looks like is Banksy. Most artist do their artwork at night because it’s harder for people to see them and not many people are around so they don’t have to worry about getting caught because if you get caught doing any type of street where you’re not supposed to you will get taken in and face jail time. This why many artists stay anonymous so they won’t get in trouble but they still want to express themselves with the art that they do and this site shows you what many artist do in New York City.</p>
        </section>
 
@@ -47,61 +47,7 @@
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-c67b4ce7-0afa-44e8-9b33-14e40370acf2"></div>
 
-      <style>
-* {
-    box-sizing: border-box;
-}
-
-.img-container {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-</style>
-<body>
-
-
-
-<div class="clearfix">
-  <div class="img-container">
-    <img src="images/building.jpg" alt="building" style="width:100%">
-    <figcaption>Photo by Pelle Sten on Flickr </figcaption>
-  </div>
-  <div class="img-container">
-    <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
-    <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
-  </div>
-  <div class="img-container">
-    <img src="images/dumbo1.jpg" alt="superhero" style="width:100%">
-    <figcaption>Photo by Michael Centeno </figcaption>
-  </div>
-</div>
-
-<div class="clearfix">
-  <div class="img-container">
-    <img src="images/fdny911.jpg" alt="fireman with US flag" style="width:100%">
-      <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
-  </div>
-  <div class="img-container">
-    <img src="images/trump-dump.jpg" alt="Trump as a poop emoji" style="width:100%">
-    <figcaption>Photo by Bobby Zucco on Flickr </figcaption>
-  </div>
-  <div class="img-container">
-    <img src="images/jamison-lottering-unsplash.jpg" alt="mural of the twin towers with the US flag" style="width:100%">
-  <figcaption>Photo by Jamison Lottering on Unsplah</figcaption>
-  </div>
-</div>
-
-
-
-  </article>
-
+    
 </main>
 
 <footer class="page-footer">
