adding more to map

--- a/map.html
+++ b/map.html
@@ -35,14 +35,9 @@
      </div>
        </header>
        <section >
-       <h3
-       >Places To Find Street Art In NYC </h3>
-       <p>New York City has a lot street around all five boroughs but many artists stay anonymous because they put their artwork where it’s not legal too. Many artists are popular and well known but people don’t even know how they look like because they like keeping themselves unknown and out of trouble for example a famous artist that is well known but no one has a clue how he looks like is Banksy. Most artist do their artwork at night because it’s harder for people to see them and not many people are around so they don’t have to worry about getting caught because if you get caught doing any type of street where you’re not supposed to you will get taken in and face jail time. This why many artists stay anonymous so they won’t get in trouble but they still want to express themselves with the art that they do and this site shows you what many artist do in New York City.</p>
+       <h3>Places To Find Street Art In NYC </h3>
+       <p>Below there is a map of NYC that shows you some of the spots in New York City where you could find street art the map even helps you and gives you directions on how to get too the destination you want, have fun exploring NYC.</p>
        </section>
-
-      <section class="article-images">
-        <p></p>
-      </section>
 
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-c67b4ce7-0afa-44e8-9b33-14e40370acf2"></div>
