--- a/map.html
+++ b/map.html
@@ -34,8 +34,8 @@
        <h2 class="articletitle">Map</h2>
      </div>
        </header>
-       <section >
-       <h3 class="map-title">Places To Find Street Art In NYC </h3>
+       <section class="map-title">
+       <h3>Places To Find Street Art In NYC </h3>
        <p>Below there is a map of NYC that shows you some of the spots in New York City where you could find street art the map even helps you and gives you directions on how to get too the destination you want, have fun exploring NYC.</p>
        </section>
 
