--- a/images.html
+++ b/images.html
@@ -21,6 +21,7 @@
               <li><a href="streetart.html">streetart</a></li>
               <li><a href="images.html">images</a></li>
               <li><a href="map.html">map</a></li>
+              <li><a href="other.html">Other</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
     </nav>
