--- a/other.html
+++ b/other.html
@@ -32,16 +32,15 @@
    <article>
        <header>
        <div class="featured-image">
-       <h2 class="articletitle">Map</h2>
+       <h2 class="articletitle">Other</h2>
      </div>
        </header>
-       <section class="map-title">
-       <h3>Places To Find Street Art In NYC </h3>
-       <p>Below there is a map of NYC that shows you some of the spots in New York City where you could find street art the map even helps you and gives you directions on how to get too the destination you want, have fun exploring NYC.</p>
+       <section>
+       <h3>Museums In NYC </h3>
+       <p>If it's to cold out and you still want to check out some art instead of walking around all over NYC below you have sevral art museums in NYC you could go and visit.</p>
        </section>
 
-      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-c67b4ce7-0afa-44e8-9b33-14e40370acf2"></div>
+
 
 
 </main>
