--- a/other.html
+++ b/other.html
@@ -39,6 +39,10 @@
        <h3>Museums In NYC </h3>
        <p>If it's to cold out and you still want to check out some art instead of walking around all over NYC below you have sevral art museums in NYC you could go and visit.</p>
        </section>
+       <figure>
+         <img src="images/moma.jpg" alt="building of the moma museum"/>
+         <figcaption>Photo by Missdju on Flickr </figcaption>
+     </figure>
 
 
 
