--- a/other.html
+++ b/other.html
@@ -39,10 +39,18 @@
        <h3>Museums In NYC </h3>
        <p>If it's to cold out and you still want to check out some art instead of walking around all over NYC below you have sevral art museums in NYC you could go and visit.</p>
        </section>
+
        <figure>
          <img src="images/moma.jpg" alt="building of the moma museum"/>
          <figcaption>Photo by Missdju on Flickr </figcaption>
      </figure>
+     <p>The Musueum of Modern Art or also known as the MoMA is often considered as one of the largest and most influential museums of modern art in the world.The MoMA has so many art exhibits that you could walk in and just look around at all the art work.</p>
+
+     <figure>
+       <img src="images/neue.jpg" alt="people lining up outside the neue galerie waiting to go inside"/>
+       <figcaption>Photo by Spanaut on Flickr </figcaption>
+   </figure>
+     <p>The Neue Galerie is a museum of early twentieth century German and Austrian art and design this Galerie has many painting and art exhibits to look around even though it's a small museum.</p>
 
 
 
