--- a/other.html
+++ b/other.html
@@ -52,6 +52,11 @@
    </figure>
      <p>The Neue Galerie is a museum of early twentieth century German and Austrian art and design this Galerie has many painting and art exhibits to look around even though it's a small museum.</p>
 
+     <figure>
+       <img src="images/nyc.jpg" alt="street art in nyc"/>
+       <figcaption>Photo by Michael Centeno </figcaption>
+   </figure>
+<p>The Museum of Street Art or also known as the MoSA is a museum with a lot of street art in it made by 20 graffiti artist that came together from the orginal 5pointz since 5pointz was demolished the artist wanted to give 5pointz back to the people by creating the Museum of Street Art which is a building with 21 floors filler with street art.</p>
 
 
 
