--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 <img src="images/fdny911.jpg" alt="firefighter on his knee over the US flag remembering 911" style="width:100%">
 <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
 </figure>
-<div class="img-container">
+<figure class="img-container">
 <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
 <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
 </figure>
-<div class="img-container">
+<figure class="img-container">
 <img src="images/trump-dump.jpg" alt="mural of trump as a dump emoji" style="width:100%">
 <figcaption>Photo by Bobby Zucco on Flickr </figcaption>
-</div>
+</figure>
 <div class="img-container">
 <img src="images/jamison-lottering-unsplash.jpg" alt="a mural of the twin towers, statue of liberty and US flag" style="width:100%">
 <figcaption>Photo by Jamison Lottering on Unsplah</figcaption>
