--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 <p>New York City is no stranger to street art many artists have used New York City as their canvas. Street art is visual art created in public places but there are also different kinds of street art like mural paintings, guerilla art and graffiti. Mural paintings are painted on walls most of the time and most of the time they have been created against the law but other times an artist is commissioned by local bars and coffee shops to draw murals outside of their businesses. Another form of street art is guerilla art which is the placement of a sculpture in a public place without official approval, most artist tend to work in secrecy because what they do is illegal most of the time they place their artwork during the night. The last type of street art is graffiti which writing or drawings that are painted on a wall or other surfaces with a public view. These are some of the street art that you see in an everyday life in New York city where ever you go.
 </p>
 </section>
-<section class="article-text">
-<figure class="clearfix">
-<figure class="img-container">
+<section>
+<div class="clearfix">
+<div class="img-container">
 <img src="images/fdny911.jpg" alt="firefighter on his knee over the US flag remembering 911" style="width:100%">
 <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
-</figure>
-<figure class="img-container">
+</div>
+<div class="img-container">
 <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
 <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
-</figure>
-<figure class="img-container">
+</div>
+<div class="img-container">
 <img src="images/trump-dump.jpg" alt="mural of trump as a dump emoji" style="width:100%">
 <figcaption>Photo by Bobby Zucco on Flickr </figcaption>
-</figure>
+</div>
 <div class="img-container">
 <img src="images/jamison-lottering-unsplash.jpg" alt="a mural of the twin towers, statue of liberty and US flag" style="width:100%">
 <figcaption>Photo by Jamison Lottering on Unsplah</figcaption>
