--- a/other.html
+++ b/other.html
@@ -57,14 +57,14 @@
        <figcaption>Photo by Michael Centeno </figcaption>
    </figure>
 <p>The Museum of Street Art or also known as the MoSA is a museum with a lot of street art in it made by 20 graffiti artist that came together from the orginal 5pointz since 5pointz was demolished the artist wanted to give 5pointz back to the people by creating the Museum of Street Art which is a building with 21 floors filler with street art.</p>
-
+</article>
 
 
 </main>
 
 <footer class="page-footer">
   <p>&copy; Michael Centeno 2018 </p>
-  <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+  <p>Contact information: Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
