no mistakes found

--- a/map.html
+++ b/map.html
@@ -43,12 +43,12 @@
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-c67b4ce7-0afa-44e8-9b33-14e40370acf2"></div>
 
-
+</article>
 </main>
 
 <footer class="page-footer">
   <p>&copy; Michael Centeno 2018 </p>
-  <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+  <p>Contact information: Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
