--- a/about.html
+++ b/about.html
@@ -41,30 +41,6 @@
        <p>New York City has a lot street around all five boroughs but many artists stay anonymous because they put their artwork where it’s not legal too. Many artists are popular and well known but people don’t even know how they look like because they like keeping themselves unknown and out of trouble for example a famous artist that is well known but no one has a clue how he looks like is Banksy. Most artist do their artwork at night because it’s harder for people to see them and not many people are around so they don’t have to worry about getting caught because if you get caught doing any type of street where you’re not supposed to you will get taken in and face jail time. This why many artists stay anonymous so they won’t get in trouble but they still want to express themselves with the art that they do and this site shows you what many artist do in New York City.</p>
        </section>
 
-      <section class="article-images">
-        <p></p>
-      </section>
-
-      <style>
-* {
-    box-sizing: border-box;
-}
-
-.img-container {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-</style>
-<body>
-
-
 
 <div class="clearfix">
   <div class="img-container">
@@ -104,7 +80,7 @@
 
 <footer class="page-footer">
   <p>&copy; Michael Centeno 2018 </p>
-  <p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+  <p>Contact information: Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
