--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
        <h2 class="articletitle">Home</h2>
        </header>
        <section class="article-introduction">
-       <h3
-       class="article-intro">Introduction</h3>
-       <p>In NYC, anywhere you go you see a lot of different street art. Many artists express themselves with the art that they do and there work always has meaning behind it. Many artists risk themselves for doing street art because in most places street art is not allowed that’s why most artist are remained anonymous. </p>
+       <h3>Introduction</h3>
+       <p class="article-intro">In NYC, anywhere you go you see a lot of different street art. Many artists express themselves with the art that they do and there work always has meaning behind it. Many artists risk themselves for doing street art because in most places street art is not allowed that’s why most artist are remained anonymous. </p>
        </section>
       <section class="article-text">
 <p>New York City is no stranger to street art many artists have used New York City as their canvas. Street art is visual art created in public places but there are also different kinds of street art like mural paintings, guerilla art and graffiti. Mural paintings are painted on walls most of the time and most of the time they have been created against the law but other times an artist is commissioned by local bars and coffee shops to draw murals outside of their businesses. Another form of street art is guerilla art which is the placement of a sculpture in a public place without official approval, most artist tend to work in secrecy because what they do is illegal most of the time they place their artwork during the night. The last type of street art is graffiti which writing or drawings that are painted on a wall or other surfaces with a public view. These are some of the street art that you see in an everyday life in New York city where ever you go.
